<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_ros_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo Garden to ROS 2 Bridge Plugins</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Gazebo 依赖 (Garden版本) -->
  <!-- 注意：package.xml 里通常写通用的 key，或者直接依赖系统库 -->
  <!-- colcon 会自动处理 rosdep，这里主要是为了文档说明 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
